--- a/src/app/main-toolbar/value-filter/value-filter.component.html
+++ b/src/app/main-toolbar/value-filter/value-filter.component.html
@@ -16,7 +16,7 @@
     </button>
   </mat-menu>
 
-  <mat-form-field class="column_filter_value" *ngIf="!isBooleanDataType() && !filter.operator.endsWith('empty')">
+  <mat-form-field class="column_filter_value" *ngIf="!isEqualBoolean() && !filter.operator.endsWith('empty')">
     <input matInput type="text" placeholder="Filter Value" [matTooltip]="valueFilterCustomizer.tooltipOf(filter)"
       [value]="valueFilterCustomizer.formattedValueOf(filter)" (input)="onValueChanged($event.target.value)"
       (keyup)="onKeyUp($event)" [formControl]="valueControl" [koiaFilterValueInput]="filter">
@@ -27,8 +27,8 @@
     <mat-error *ngIf="valueControl.invalid">{{ valueControl.getError('error') }}</mat-error>
   </mat-form-field>
 
-  <span class="span_menu_trigger" *ngIf="isBooleanDataType()"
-    [matMenuTriggerFor]="booleanMenu">{{ filter.value ? 'true' : 'false' }}</span>
+  <span class="span_menu_trigger" *ngIf="isEqualBoolean()"
+    [matMenuTriggerFor]="booleanMenu">{{ filter.value }}</span>
   <mat-menu #booleanMenu="matMenu">
     <button mat-menu-item [disabled]="filter.value === true" (click)="filter.value = true; onChange.emit()">
       <span>true</span>
