--- a/src/app/raw-data/raw-data.component.css
+++ b/src/app/raw-data/raw-data.component.css
@@ -11,16 +11,23 @@
 th {
   padding: 5px;
   background-color: white;
+  overflow: hidden;
 }
 
 td {
-   word-wrap: break-word;
+   word-wrap: break-word;   
    vertical-align: top;
    padding: 5px;
 }
 
 .td_Text {
   text-align: left;
+}
+
+.td_Object {
+  white-space: pre;
+  overflow: hidden;
+  cursor: pointer;
 }
 
 .td_Number {
