Adopt column mappings from existing scene when creating new scene

--- a/src/app/raw-data/raw-data.component.html
+++ b/src/app/raw-data/raw-data.component.html
@@ -22,7 +22,7 @@
       (click)="considerColumnWidths = !considerColumnWidths">
       <mat-icon>wrap_text</mat-icon>
     </button>
-    <button mat-button [color]="showNestedObjects ? 'accent' : ''" mat-icon-button
+    <button mat-button *ngIf="hasObjectDataTypeColumns" [color]="showNestedObjects ? 'accent' : ''" mat-icon-button
       [matTooltip]="showNestedObjects ? 'Hide nested objects' : 'Show nested objects'"
       (click)="showNestedObjects = !showNestedObjects">
       <mat-icon>code</mat-icon>
