--- a/src/app/scene/column-mapping/column-mapping.component.html
+++ b/src/app/scene/column-mapping/column-mapping.component.html
@@ -5,7 +5,7 @@
 <mat-form-field class="column_name">
   <input matInput type="text" placeholder="Column Name" [value]="mapping.target.name"
     (change)="onColumnNameChanged($event.target.value)" [formControl]="columnNameControl">
-  <mat-error *ngIf="columnNameControl.invalid">{{ getColumnNameErrorMessage() }}</mat-error>  
+  <mat-error *ngIf="columnNameControl.invalid">{{ getColumnNameErrorMessage() }}</mat-error>
 </mat-form-field>
 <mat-form-field class="column_data_type">
   <mat-select class="select_data_type" placeholder="Data Type" [(value)]="mapping.target.dataType"
@@ -34,3 +34,4 @@
     </mat-option>
   </mat-select>
 </mat-form-field>
+<img *ngIf="mapping.warning" src="/assets/warning.png" [matTooltip]="mapping.warning" matTooltipClass="tooltip_warning" />
