different minor changes

--- a/src/app/scene/scene.component.html
+++ b/src/app/scene/scene.component.html
@@ -161,12 +161,12 @@
         matTooltipClass="tooltip_preview_warning" />
       &nbsp;
       <button id="but_load_data" mat-raised-button color="primary" matTooltip="Loads all data to the database"
-        [disabled]="maxItemsToLoad < 1 || maxItemsToLoad > maxItemsPerScene" (click)="persistScene()">
+        [disabled]="maxItemsToLoadControl.value < 1 || maxItemsToLoadControl.value > maxItemsPerScene" (click)="persistScene()">
         Load Data
       </button>
       &nbsp;
       <mat-form-field class="max_items">
-        <input matInput type="number" placeholder="Max. items" [(ngModel)]="maxItemsToLoad" required min="1"
+        <input matInput type="number" placeholder="Max. items" required min="1"
           [max]="maxItemsPerScene" step="1" [formControl]="maxItemsToLoadControl"
           [matTooltip]="'Maximum number of items to be loaded\n(min: 1, max: ' + maxItemsPerScene.toLocaleString() + ')'"
           matTooltipClass="multi-line-tooltip">
