migrating to Angular 9

--- a/src/app/flex-canvas/flex-canvas.component.html
+++ b/src/app/flex-canvas/flex-canvas.component.html
@@ -14,9 +14,7 @@
    </mat-sidenav>
 
    <div #header class="sticky_header">
-      <koia-main-toolbar [route]="route" (onAfterViewChecked)="adjustLayout()"
-         (onFilterChange)="onFilterChanged($event)">
-      </koia-main-toolbar>
+      <koia-main-toolbar [route]="route" (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
       <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..."></mat-progress-bar>
       <div id="view_toolbar">
          <button id="but_print" mat-button mat-icon-button printSectionId="print-section" ngxPrint
