--- a/src/app/grid/grid.component.html
+++ b/src/app/grid/grid.component.html
@@ -16,9 +16,7 @@
    </mat-sidenav>
 
    <div #header class="sticky_header">
-      <koia-main-toolbar [route]="route" (onAfterViewChecked)="adjustLayout()"
-         (onFilterChange)="onFilterChanged($event)">
-      </koia-main-toolbar>
+      <koia-main-toolbar [route]="route" (onFilterChange)="onFilterChanged($event)"></koia-main-toolbar>
       <mat-progress-bar *ngIf="loading" mode="indeterminate" matTooltip="Loading Data..."></mat-progress-bar>
       <div id="view_toolbar">
          <button mat-icon-button [matMenuTriggerFor]="moreMenu">
