--- a/src/app/main-toolbar/range-filter/range-filter.component.html
+++ b/src/app/main-toolbar/range-filter/range-filter.component.html
@@ -11,9 +11,9 @@
     </button>
   </mat-menu>
   &nbsp;&nbsp;
-  <ng5-slider [value]="filter.selValueRange.min" [highValue]="filter.selValueRange.max"
+  <ngx-slider [value]="filter.selValueRange.min" [highValue]="filter.selValueRange.max"
     [options]="filter.sliderOptions" (highValueChange)="filter.selValueRange.maxExcluding = false"
-    (userChangeEnd)="onChanged($event)"></ng5-slider>
+    (userChangeEnd)="onChanged($event)"></ngx-slider>
   <button class="but_reset_range_filter" mat-button color="accent" mat-icon-button matTooltip="Reset value range filter"
     [disabled]="!filter.isFiltered()" (click)="reset()">
     <mat-icon>undo</mat-icon>
